Purge notes in logout, animate login, register, and entries

--- a/07-journal-app/public/index.html
+++ b/07-journal-app/public/index.html
@@ -27,6 +27,10 @@
 			integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
 		<title>Journal App</title>
 	</head>
 	<body>
